@@ -33,3 +33,4 @@ plugins/plugins-available/conf/test.pl
 plugins/plugins-available/conf/tmon.out
 MYMETA.json
 MYMETA.yml
+menu_local.conf
