@@ -1,4 +1,4 @@
-.\" Automatically generated by Pod::Man 2.22 (Pod::Simple 3.07)
+.\" Automatically generated by Pod::Man 2.22 (Pod::Simple 3.13)
 .\"
 .\" Standard preamble:
 .\" ========================================================================
@@ -124,7 +124,7 @@
 .\" ========================================================================
 .\"
 .IX Title "thruk 3"
-.TH thruk 3 "2012-02-28" "perl v5.10.1" "User Contributed Perl Documentation"
+.TH thruk 3 "2012-03-05" "perl v5.10.1" "User Contributed Perl Documentation"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
@@ -159,8 +159,10 @@ script has the following arguments
 .Ve
 .IP "\fB\-b\fR \fIbackend\fR, \fB\-\-backend\fR=\fIbackend\fR" 4
 .IX Item "-b backend, --backend=backend"
-.Vb 1
-\&    specify backend(s), otherwise the default backends will be used
+.Vb 3
+\&    specify backend(s), otherwise the default backends will be
+\&    used. Specify the key of the backend. Use <\-l> to get a list
+\&    of backends.
 .Ve
 .IP "\fB\-l\fR , \fB\-\-list\-backends\fR" 4
 .IX Item "-l , --list-backends"
