@@ -7,6 +7,7 @@ This file documents the revision history for the Monitoring Webinterface Thruk.
           - fixed packages apache config
           - fixed missing bracket on problems page
           - fixed problem with missing templates in packages
+          - fixed customizing menu with insert_item()
 
 1.20     Tue Feb 28 22:38:23 CET 2012
           - added cli tool
